<resources>
    <string name="app_name">GrabHouse</string>
    <string name="title_activity_home">GrabHouse</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home_screen">home_screen</string>
    <string name="tab_text_1">Purchase</string>
    <string name="tab_text_2">Rent</string>
    <string name="tab_text_3">Sell</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bookmarks">bookmarks</string>
    <string name="email"><b>Email_id</b></string>
    <string name="pass">password</string>
    <string name="login">Login</string>
    <string name="create">New User? Create Account</string>
    <string name="forgot">forgot password?</string>
    <string name="register">Create Account</string>


    <string name="drawer_item_option1">Option 1</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_option2">Option 2</string>
    <string name="drawer_item_option3">Option 3</string>
    <string name="purchase">Purchase</string>
    <string name="rent">Rent</string>
    <string name="sell">Sell</string>
    <string name="title_activity_bottom_nav_activityy">BottomNavActivityy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="number">Enter Phone Number</string>
    <string name="location">Enter Prop Location</string>
    <string name="upload">Browse Images</string>
    <string name="up">Upload Here</string>
    <string name="price">Enter Price</string>
    <string name="desc">Enter long Description</string>

    <string-array name="rentorpurchase">
        <item>Sell</item>
        <item>Lease</item>
    </string-array>
    <string name="title_activity_nav">GrabHouse</string>
    <string name="city">Search by locality</string>
    <string name="whatoffer">Popular cities to search by</string>
    <string name="changepass">Password</string>
</resources>
