<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fcproject.grabhouce.sellFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!--<Button-->
            <!--android:id="@+id/btnChoose"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_marginStart="19dp"-->
            <!--android:layout_marginTop="46dp"-->
            <!--android:text="choose image" />-->

        <!--<EditText-->
            <!--android:id="@+id/etNumber"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="enter number"-->
            <!--android:layout_alignStart="@+id/etLocation"-->
            <!--android:layout_below="@+id/etLocation"-->
            <!--android:layout_marginTop="26dp"-->
            <!--android:ems="10"-->
            <!--android:inputType="textPersonName" />-->

        <!--<EditText-->
            <!--android:id="@+id/etLocation"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignStart="@+id/etPrice"-->
            <!--android:hint="enter location"-->
            <!--android:layout_below="@+id/etPrice"-->
            <!--android:layout_marginTop="25dp"-->
            <!--android:ems="10"-->
            <!--android:inputType="textPersonName" />-->

        <!--<EditText-->
            <!--android:id="@+id/etPrice"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignStart="@+id/etTitle"-->
            <!--android:layout_below="@+id/etTitle"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:hint="enter price"-->
            <!--android:ems="10"-->
            <!--android:inputType="textPersonName" />-->

        <!--<EditText-->
            <!--android:id="@+id/etTitle"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_below="@+id/btnChoose"-->
            <!--android:layout_marginStart="45dp"-->
            <!--android:layout_marginTop="24dp"-->
            <!--android:hint="enter title"-->
            <!--android:ems="10"-->
            <!--android:inputType="textPersonName" />-->

        <!--<ImageView-->
            <!--android:id="@+id/ivImg"-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="100dp"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_toEndOf="@+id/btnUpload" />-->

        <!--<Button-->
            <!--android:id="@+id/btnUpload"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->

            <!--android:layout_alignTop="@+id/etNumber"-->
            <!--android:layout_marginTop="91dp"-->
            <!--android:layout_toEndOf="@+id/btnChoose"-->
            <!--android:text="upload" />-->

        <ImageView
            android:src="@drawable/ic_launcher_background"
            android:id="@+id/ivImg"
            android:layout_width="180dp"
            android:layout_height="220dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />
        <LinearLayout
            android:id="@+id/l1"
            android:orientation="horizontal"
            android:layout_below="@+id/ivImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtIn1"
            android:layout_below="@+id/ivImg"
            android:layout_weight="1"
            android:layout_margin="@dimen/materialize_typography_body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/number"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:textSize="15sp"
                android:layout_weight="1"
                android:inputType="number|numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtIn2"
            android:layout_below="@+id/txtIn1"
            android:layout_weight="1"
            android:layout_margin="@dimen/materialize_typography_body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="text"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:textSize="15sp"
                android:layout_weight="1"
                android:hint="@string/location"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/l2"
            android:layout_below="@+id/l1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_margin="@dimen/materialize_typography_body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_margin="@dimen/materialize_typography_body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:inputType="textMultiLine"
                    android:maxLines="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/desc"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/l2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:textSize="15sp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_file"
                android:text="@string/upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:text="@string/up"
                android:background="@drawable/button_file"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:textSize="15sp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>

<!--</FrameLayout>-->
<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context="com.fcproject.grabhouce.purchaseFragment">-->


    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
        <!--&gt;-->

        <!--&lt;!&ndash;<ProgressBar&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/pb"&ndash;&gt;-->
            <!--&lt;!&ndash;style="?android:attr/progressBarStyle"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_centerVertical="true"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_centerHorizontal="true"&ndash;&gt;-->
            <!--&lt;!&ndash;/>&ndash;&gt;-->

        <!--<android.support.v7.widget.RecyclerView-->
            <!--android:id="@+id/recycler_View"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_alignParentStart="true"-->
            <!--/>-->

    <!--</RelativeLayout>-->


<!--</FrameLayout>-->
